[gd_scene load_steps=9 format=3 uid="uid://crpppa3jd761u"]

[ext_resource type="Texture2D" uid="uid://c3ucu6nuqrjco" path="res://Particles/circle.png" id="1_8w01v"]
[ext_resource type="Script" path="res://Scenes/ShipProjectile/ship_projectile.gd" id="1_rfumx"]
[ext_resource type="Script" path="res://Scenes/ShipProjectile/projectile_trail.gd" id="3_ccatv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nmvw2"]
radius = 7.0

[sub_resource type="Curve" id="Curve_gc5fo"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_7jb8o"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_k8u4u"]
curve = SubResource("Curve_7jb8o")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1hbrq"]
particle_flag_disable_z = true
direction = Vector3(1, 1, 0)
spread = 180.0
initial_velocity_min = 70.0
initial_velocity_max = 140.0
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.2
scale_curve = SubResource("CurveTexture_k8u4u")

[node name="PlayerProjectile" type="Area2D" groups=["projectile"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_rfumx")
damage = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_8w01v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nmvw2")

[node name="ProjectileTrail" type="Line2D" parent="."]
top_level = true
width_curve = SubResource("Curve_gc5fo")
script = ExtResource("3_ccatv")
max_length = 7

[node name="ExplosionParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 15
process_material = SubResource("ParticleProcessMaterial_1hbrq")
texture = ExtResource("1_8w01v")
one_shot = true
explosiveness = 1.0

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
